--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <link href="css/owl.carousel.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 
-	
+
+<meta name="Description" content="Página para encontrar los servicios y productos que Karma ofrece a sus clientes, asociados y distribuidores.">
+<meta name="Keywords" content="Services, página de servicios IT, servicios especializados en IT">
 </head>
 
 <body>
@@ -37,7 +39,7 @@
 							<a class="nav-link" href="#">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Services</a>
+							<a class="nav-link" href="services.html">Services</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Blog</a>
@@ -306,6 +308,18 @@
 	
 	
 	
+	
+	
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9F5Y8JFQGZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9F5Y8JFQGZ');
+</script>
+
 	
 </body>
 </html>
